--- a/_includes/modals/purchase.liquid
+++ b/_includes/modals/purchase.liquid
@@ -1,10 +1,14 @@
-<div class="modal-dialog">
+<div class="modal-dialog payment-modal">
   <div class="modal-content">
     <div class="modal-header">
       <h1 class="modal-title fs-5 item-title">Hey, read this!</h1>
-      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+          <path d="M5 3H3V21H21V3H5ZM19 5V19H5V5H19ZM11 9H9V7H7V9H9V11H11V13H9V15H7V17H9V15H11V13H13V15H15V17H17V15H15V13H13V11H15V9H17V7H15V9H13V11H11V9Z" fill="#647488"/>
+        </svg>
+      </button>
     </div>
-    <div class="modal-body">
+    <div class="modal-body font-kufam">
       <form id="payment-form">
         <label>
           Email
