--- a/_sass/helpers.scss
+++ b/_sass/helpers.scss
@@ -67,3 +67,18 @@ span.space {
     margin-left: auto !important;
     margin-right: auto !important;
 }
+
+.font-horsemen {
+    font-family: 'Horsemen', sans-serif;
+    line-height: 2.25;
+    color: #fff;
+    text-shadow: 0px 4px 20px rgba(235, 56, 207, 0.50);
+}
+
+.font-kufam {
+    font-family: 'Kufam', sans-serif;
+}
+
+.text-green {
+    color: #66ffc8;
+}
