Added phone number as global variable

--- a/pages/success.liquid
+++ b/pages/success.liquid
@@ -65,7 +65,7 @@ permalink: /success/
 <div class="hero text-center">
     <h1 class="font-horsemen">Thanks for Joining the Rebellion</h1>
     <p class="text-green font-kufam">
-        We’ve emailed you a receipt. Need more help? <a href="mailto:info@thesalesrebellion.com">Email us</a> or give us a <a href="tel:6152199828">call</a>.
+        We’ve emailed you a receipt. Need more help? <a href="mailto:info@thesalesrebellion.com">Email us</a> or give us a <a href="tel:{{ global.phoneNumber }}">call</a>.
     </p>
 </div>
 
