--- a/_includes/footer.liquid
+++ b/_includes/footer.liquid
@@ -45,7 +45,7 @@
           </div>
           <div class="d-flex align-items-center">
             <img src="/img/svg/pixel-phone.svg" alt="phone icon">
-            <a href="tel:4072058054" class="mb-0 ps-3 text-white">407.205.8054</a>
+            <a href="tel:{{ global.phoneNumber }}" class="mb-0 ps-3 text-white">{{ global.phoneNumber | slice: 0, 3 }}.{{ global.phoneNumber | slice: 3, 3 }}.{{ global.phoneNumber | slice: 6, 4 }}</a>
           </div>
           <a
             class="btn-footer"
