--- a/_layouts/default.liquid
+++ b/_layouts/default.liquid
@@ -10,9 +10,14 @@ layout: compress
 
     {{ content }}
 
+    
     {%- if landing_page == false -%}
-      {%- include "footer.liquid" %}
+    {%- include "footer.liquid" %}
     {%- endif -%}
+    
+    {% if page.fileSlug != "totality" %}
+      {% include "modals/totality.liquid" %}
+    {% endif %}
     
     <script src="/js/scripts.js"></script>
 
