Added Maribel Lara to Totality page

--- a/pages/totality.liquid
+++ b/pages/totality.liquid
@@ -195,6 +195,11 @@ speakers:
     alt_text: John Duvoisin
     url: https://www.linkedin.com/in/john-duvoisin-45933b185/
   -
+    name: Maribel Lara
+    image: /img/speakers/maribel-lara.webp
+    alt_text: Maribel Lara
+    url: https://www.linkedin.com/in/maribellara/
+  -
     name: Dale Dupree
     image: /img/speakers/dale-dupree.webp
     alt_text: Dale Dupree
